config update changes

--- a/config/nginx.conf.sample
+++ b/config/nginx.conf.sample
@@ -210,7 +210,7 @@ location ~ ^/(index|get|static|errors/report|errors/404|errors/503|health_check)
     set $cors_origin "*";
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
-        add_header 'Access-Control-Allow-Methods' 'POST, GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Methods' 'DELETE, POST, PUT, PATCH, GET, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With,X-Cache-Hash' always;
         ### Tell client that this pre-flight info is valid for 20 days
         add_header 'Access-Control-Max-Age' 1728000;
