link react projects

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,10 +10,13 @@ services:
       - ./src/composer.json:/var/www/html/composer.json:cached
       - ./src/composer.lock:/var/www/html/composer.lock:cached
       - ./src/nginx.conf.sample:/var/www/html/nginx.conf:cached
+      - /Users/skang/dev/purina/purina-us-justright-react-addons/dist-addons-bdp:/var/www/html/pub/addons-bdp:cached
+      - /Users/skang/dev/purina/purina-us-justright-react-addons/dist-addons-tab:/var/www/html/pub/addons-tab:cached
+      - /Users/skang/dev/purina/purina-us-justright-module-react-app/build:/var/www.html/pub/create-a-blend:cached
       #- ./src/auth.json:/var/www/html/auth.json:cached
       #- ./src/m2-hotfixes:/var/www/html/m2-hotfixes:cached
       #- ./src/patches:/var/www/html/patches:cached
-      #- ./src/var/log:/var/www/html/var/log:cached
+      - ./src/var/log:/var/www/html/var/log:cached
       #- ./src/var/report:/var/www/html/var/report:cached
 
   phpfpm:
