Comment out /generated and /vendor folder volume syncing

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,8 @@ services:
       - /Users/skang/dev/purina/purina-us-justright-react-addons/dist-addons-tab:/var/www/html/pub/addons-tab:cached
       - /Users/skang/dev/purina/purina-us-justright-module-react-app/build:/var/www/html/pub/create-a-blend:cached
       - /Users/skang/dev/purina/purina-us-justright-module-react-blend-tab/build:/var/www/html/pub/blend-tab:cached
+      # - ./src/generated:/var/www/html/generated:cached
+      # - ./src/vendor:/var/www/html/vendor:cached
       #- ./src/auth.json:/var/www/html/auth.json:cached
       #- ./src/m2-hotfixes:/var/www/html/m2-hotfixes:cached
       #- ./src/patches:/var/www/html/patches:cached
